# knn-project

./: .gitignore  README.md  build.sh  output.local.jsonl  output_32b_prompt2.local.jsonl  pyproject.toml  requirements.txt
answers/: output_32b_base_all.jsonl  output_32b_base_test42.jsonl  output_3b_base_all.jsonl  output_3b_fewshot_test42.jsonl  output_3b_lora_test42.jsonl
build_scripts/: build_qwen_2_5_vl_xb_instruct.sh  build_qwen_2_5_vl_xb_instruct__requirements.txt
finetuning_datasets/: fulldataset.json
finetuning_datasets/42/: testset42.json  trainset42.json  valset42.json
logs/answers/: output_7b_base_test42.jsonl
logs/results/: output_3b_base_test42_statistics_thresholds.json
model_inference_outputs/0423/: output_7b_fulldataset.jsonl
model_inference_outputs/0428/: output_base_3b_testset42.jsonl
model_inference_outputs/0429/: output_lora_7b_testset42.jsonl
prompts/: annotate_prompt.j2  annotate_prompt_2.j2  few_shot_annotate_prompt.j2
results/: output_32b_base_all_statistics_thresholds.json  output_32b_base_test42_statistics_thresholds.json  output_3b_base_all_statistics_thresholds.json  output_3b_fewshot_test42_statistics_thresholds.json  output_3b_lora_test42_statistics_thresholds.json  output_7b_base_all_statistics_thresholds.json  output_7b_base_test42_statistics_thresholds.json  output_7b_lora_test42_statistics_thresholds.json
scripts/: build_finetune_dataset.py  finetune_model.py  parse_dataset.py  run_annotation.py  run_experiment.py  split_dataset.py  validate_model.py
tests/: test_annotation_result.py  test_utils.py
(+32 files in other folders)
